<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.beercraft.activities.RegisterActivity" android:background="#00BCD4">


    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" android:background="#000000"/>

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="#00BCD4" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/toolbarAdd"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="@+id/toolbarAdd"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_edittext"
            android:background="@drawable/rounded_edittext_register_login"
            android:layout_marginBottom="8dp"

            app:layout_constraintTop_toBottomOf="@+id/toolbarAdd" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/hint_username" android:textSize="24sp"
            android:paddingLeft="16dp" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/email"
            app:layout_constraintEnd_toEndOf="@+id/username_edittext" app:layout_constraintStart_toStartOf="@+id/username_edittext"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username_edittext"

            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/rounded_edittext_register_login" android:hint="@string/hint_email"
            android:paddingLeft="16dp"
            android:textSize="24sp" android:textColor="#020000"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email" android:background="@drawable/rounded_edittext_register_login"
            android:hint="@string/hint_password"
            android:paddingLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/email" android:textSize="24sp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnlogin" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_edittext_register_login"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.497"/>
    <TextView
            android:text="@string/alreadyhaveanaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/already" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnlogin" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif" android:textStyle="bold"/>
    <Button
            android:text="@string/add_image"
            android:layout_width="200dp"
            android:layout_height="210dp"
            android:id="@+id/select_photo_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbarAdd" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/username_edittext" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.497" android:layout_marginEnd="8dp"

            android:background="@drawable/rounded_addimage"
            app:layout_constraintEnd_toEndOf="parent" android:ellipsize="middle" android:textColor="#1E88E5"/>
    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="200dp" android:layout_height="200dp"
                                                  app:civ_border_width="4dp"
                                                  app:layout_constraintTop_toTopOf="@+id/select_photo_btn"
                                                  app:layout_constraintEnd_toEndOf="@+id/select_photo_btn"
                                                  app:layout_constraintStart_toStartOf="@+id/select_photo_btn"
                                                  app:layout_constraintBottom_toBottomOf="@+id/select_photo_btn"
                                                  android:id="@+id/userphoto"/>
</android.support.constraint.ConstraintLayout>