<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.beercraft.activities.RegisterActivity" android:background="#00BCD4">


    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" android:background="#000000"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="#00BCD4" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/toolbarAdd"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="@+id/toolbarAdd"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/email"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"

            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/rounded_edittext_register_login" android:hint="@string/hint_email"
            android:paddingLeft="16dp"
            android:textSize="24sp" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbarAdd" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:background="@drawable/rounded_edittext_register_login"
            android:hint="@string/hint_password"
            android:paddingLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/email" android:textSize="24sp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_register_login"
            android:id="@+id/btnlogin" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.137"/>

</android.support.constraint.ConstraintLayout>